# genome-pocket

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  run_tests.sh
.survey/airllm-json-extraction-2026-bench/: context.md  platform-map.md  solutions.md  triage.md
.survey/multimodal-embedding-rag-2026/: context.md  platform-map.md  solutions.md  triage.md
cocoindex/: __init__.py
cocoindex/connectors/: __init__.py  localfs.py  sqlite.py
cocoindex/ops/: __init__.py  sentence_transformers.py  text.py
cocoindex/resources/: __init__.py  chunk.py  file.py  id.py
docs/: README.md  index.html
docs/architecture/: 2026-research-improvements.md  cocoindex-gap.md  data-flow.md  graph-target.md  mcp-server.md  ops-layer.md  retrieval-layer.md  system-overview.md
docs/decisions/: adr-001-local-first.md  adr-002-hybrid-db.md
docs/development/: api-spec.md  cocoindex-guide.md  pocketindex-guide.md  setup-guide.md
docs/jeo_position/: 00-context-brief.md  01-preparation.md  02-scope.md  03-tech-challenges-3h.md  04-product-naming.md  05-credits-and-api-experiments.md  README.md
docs/planning/: backlog.md  pm-product-strategy-2026.md  review-2026-improvements.md  roadmap.md  sprint-01.md
eval/: gold.json
eval/corpus/: blend_three.md  blend_two.md  cache_lru.md  cache_lru_alt.md  cache_lru_more.md  (+16 more)
notes/: welcome.md
pocket/: __init__.py  admin.py  api_server.py  cli.py  config.py  evaluation.py  mcp_server.py  pipeline.py  pipeline_coco.py  pipeline_native.py  retrieval.py  web_ui.py
pocketindex/: __init__.py  app.py  context.py  memo.py  runtime.py  stats.py
tests/: conftest.py  test_2026_improvements.py  test_eval_proof.py  test_graph_unit.py  test_multimodal.py  test_pipeline.py  test_retrieval_api.py
(+24 files in other folders)
