[project]
name = "genome-pocket"
version = "0.1.0"
description = "Pocket Knowledge Ops: A local-first personal knowledge runtime"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlite-vec>=0.1.9",
    "sentence-transformers>=3.0.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    "starlette>=0.37.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
# Optional local heavy-model extraction backend for the knowledge-graph op
# (POCKET-404). airLLM layer-shards a 70B-class model onto a single 4GB GPU so a
# capable extractor runs entirely on-device. The base install stays ML-free; the
# AirLLMExtractor imports these lazily.
airllm = [
    "airllm>=2.11.0",
    "torch",
    "transformers",
]


[project.scripts]
pocket = "pocket.cli:cli"
pocket-mcp = "pocket.mcp_server:main"
pocket-api = "pocket.api_server:main"

[tool.setuptools]
packages = [
    "pocket",
    "pocketindex",
    "pocketindex.connectors",
    "pocketindex.ops",
    "pocketindex.resources",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
